<resources>
    <string name="app_name">notes-list</string>
    <string name="note_stack_collapse_label">Свернуть</string>
    <string name="note_stack_empty_placeholder">Нет заметок</string>
    <string name="date_today">Сегодня</string>
    <string name="date_yesterday">Вчера</string>
    <string name="date_tomorrow">Завтра</string>

    <string name="note_details_title_hint">Заголовок</string>
    <string name="note_details_text_hint">Текст заметки</string>
    <string name="note_details_important_label">Важно</string>
    <string name="note_details_save_add">Добавить</string>
    <string name="note_details_save_edit">Сохранить</string>
    <string name="note_details_error_empty">Необходимо заполнить</string>
    <string name="note_details_error_too_long">Слишком длинный заголовок, нужно сократить</string>
    <string name="note_details_read_label">Прочитана</string>
    <string name="note_details_created_at_label">Дата создания: </string>
    <string name="note_read">Прочитано 📖</string>
    <string name="note_not_read">Не прочитано 📘</string>
    <string name="read_toggle_hint">Зажмите, чтобы изменить</string>
    <string name="edit_note">Редактировать</string>
    <string name="add_note">Создать</string>
    <string name="no_notes_yet">Заметок пока нет</string>

    <string name="select_note_hint">Выберите заметку из списка</string>
    <string name="exit_dialog_title">Выход</string>
    <string name="exit_dialog_message">Вы действительно хотите выйти из приложения?</string>
    <string name="lose_data_dialog_title">Потеря данных</string>
    <string name="lose_data_dialog_message">Ваши изменения не будут сохранены. Вы действительно хотите закрыть?</string>
    <string name="dialog_yes">Да</string>
    <string name="dialog_no">Нет</string>
    <string name="search_notes_hint">Поиск заметок...</string>
    <string name="settings_title">Настройки стопок</string>
    <string name="settings_stack_spacing">Расстояние между карточками</string>
    <string name="settings_stack_max_visible">Макс. видимых заметок</string>
    <string name="settings_reset">Сбросить</string>
    <string name="settings_save">Сохранить</string>
</resources>